force-app/main/default/objects/Short_URL_Click__c/Short_URL_Click__c.object-meta.xml
<CustomObject>
    <label>Short URL Click</label>
    <nameField>
        <displayFormat>Click-{0000}</displayFormat>
        <label>Short URL Click Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Short URL Clicks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>