force-app/main/default/objects/Short_URL_Click__c/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <label>Short URL</label>
    <referenceTo>Short_URL__c</referenceTo>
    <relationshipLabel>Short URL Clicks</relationshipLabel>
    <relationshipName>Short_URL_Clicks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>